# voxel_engine

./: .gitignore  CMakeLists.txt  README.md  index.html  quickRun.sh
include/glad/: glad.h
shaders/: edge_fragment_shader.glsl  fragment_shader.glsl
src/: main.cpp  main.h  shader_utils.cpp  shader_utils.h
src/glad/: glad.c
src/objects/: Block.cpp  Block.h  Player.cpp  Player.h
